# morphograph-infra

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  requirements_no_torch.txt
configs/data/: domains.example.yaml
configs/experiments/: baseline_segformer.example.yaml  morphograph.example.yaml
configs/protocols/: lodo.example.yaml
docs/: BENCHMARK_PROTOCOL.md  DATA_CONTRACT.md  DECISIONS.md  EXPERIMENT_GOVERNANCE.md  EXPERIMENT_ROADMAP.md  PROJECT_CHARTER.md  RESEARCH_LOG.md
runs/B0/: history.json  summary.json
runs/B1a/: history.json  summary.json
runs/B2/: history.json  summary.json
runs/B2_dt_v1/: history.json  summary.json
runs/B2_dt_v2/: history.json  summary.json
runs/B2_dt_v3/: history.json  summary.json
runs/B2_dt_v3_w12/: history.json  summary.json
runs/B2_dt_v3_w8/: history.json  summary.json
runs/B2_dt_v4/: history.json  summary.json
runs/B2_dt_v4_w10/: history.json  summary.json
runs/B2_dt_v4_w15/: history.json  summary.json
runs/B2_dt_v4_w20/: history.json  summary.json
runs/B2_dt_v4_w5/: history.json  summary.json
runs/B2_dt_v4_w8/: history.json  summary.json
runs/B2_w03/: history.json  summary.json
scripts/: audit_splits.py  build_graph_labels.py  eval_topology.py  evaluate.py  overfit_test.py  prepare_dataset.py  run_b2_fine_sweep.sh  run_b2_sweep.sh  run_b2_wave2.sh  run_lodo.py  runpod_setup.sh  sanity_check.sh  train.py  train_b0.py  train_b1a.py  train_b2.py  visualize_dt_targets.py
tests/: test_graph_targets.py  test_protocol_audit.py  test_result_schema.py  test_schema.py
(+23 files in other folders)
