[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "morphograph-infra"
version = "0.1.0"
description = "Cross-Site Morphology-Graph Learning for Infrastructure Defect Understanding"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.6",
    "torchvision",
    "segmentation-models-pytorch",
    "albumentations",
    "scikit-image",
    "networkx",
    "pyyaml",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
